--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node --experimental-vm-modules ./node_modules/jest/bin/jest.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/andrea-liliana/fizzbuzz/issues"
   },
-  "homepage": "https://github.com/andrea-liliana/fizzbuzz#readme"
+  "homepage": "https://github.com/andrea-liliana/fizzbuzz#readme",
+  "devDependencies": {
+    "jest": "^28.1.0"
+  }
 }
